// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initializes all reducers 1`] = `
Object {
  "authorization": Object {
    "cameraAuthorized": "undetermined",
    "notificationsAuthorized": "undetermined",
    "photoAuthorized": "undetermined",
  },
  "contacts": Object {
    "index": 0,
    "key": "contacts",
    "selectedContact": false,
  },
  "events": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "flags": Object {
    "antiSybilVerification": "phoneAndFunCaptcha",
    "darkTheme": false,
    "debug": false,
    "designSystem": false,
    "metaTx": true,
    "sandbox": false,
  },
  "hdwallet": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "history": Hd {
    "j": 65937614,
    "k": null,
    "q": 8192,
  },
  "hub": pa {
    "e": Array [
      "head",
      null,
      "events",
      Lf {
        "count": 0,
        "ea": null,
        "j": 31858766,
        "k": null,
        "p": 0,
        "q": 8192,
        "sa": W {
          "W": Array [],
          "g": 0,
          "j": 167668511,
          "k": null,
          "p": 0,
          "q": 8196,
          "root": ef {
            "e": Array [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            "u": null,
          },
          "shift": 5,
        },
      },
    ],
    "g": 2,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "migrations": Object {
    "steps": Object {},
    "targets": Array [],
  },
  "myInfo": Object {
    "changed": Object {},
  },
  "networking": Object {},
  "onboarding": Object {
    "newbie": false,
    "userData": Object {},
  },
  "recovery": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "request": null,
  "scanner": Object {
    "cameraEnabled": false,
  },
  "settings": Object {
    "analyticsOptOut": false,
    "dataBackup": false,
  },
  "sns": Object {},
  "status": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "uport": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "vc": Object {
    "jwt": Array [],
  },
}
`;

exports[`initializes all reducers 2`] = `
Object {
  "authorization": Object {
    "cameraAuthorized": "undetermined",
    "notificationsAuthorized": "undetermined",
    "photoAuthorized": "undetermined",
  },
  "contacts": Object {
    "index": 0,
    "key": "contacts",
    "selectedContact": false,
  },
  "events": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "flags": Object {
    "antiSybilVerification": "phoneAndFunCaptcha",
    "darkTheme": false,
    "debug": false,
    "designSystem": false,
    "metaTx": true,
    "sandbox": false,
  },
  "hdwallet": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "history": Hd {
    "j": 65937614,
    "k": null,
    "q": 8192,
  },
  "hub": pa {
    "e": Array [
      "head",
      null,
      "events",
      Lf {
        "count": 0,
        "ea": null,
        "j": 31858766,
        "k": null,
        "p": 0,
        "q": 8192,
        "sa": W {
          "W": Array [],
          "g": 0,
          "j": 167668511,
          "k": null,
          "p": 0,
          "q": 8196,
          "root": ef {
            "e": Array [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            "u": null,
          },
          "shift": 5,
        },
      },
    ],
    "g": 2,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "migrations": Object {
    "steps": Object {},
    "targets": Array [],
  },
  "myInfo": Object {
    "changed": Object {},
  },
  "networking": Object {},
  "onboarding": Object {
    "newbie": false,
    "userData": Object {},
  },
  "recovery": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "request": null,
  "scanner": Object {
    "cameraEnabled": false,
  },
  "settings": Object {
    "analyticsOptOut": false,
    "dataBackup": false,
  },
  "sns": Object {},
  "status": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "uport": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "vc": Object {
    "jwt": Array [],
  },
}
`;

exports[`resetDevice() 1`] = `
Object {
  "authorization": Object {
    "cameraAuthorized": "undetermined",
    "notificationsAuthorized": "undetermined",
    "photoAuthorized": "undetermined",
  },
  "contacts": Object {
    "index": 0,
    "key": "contacts",
    "selectedContact": false,
  },
  "events": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "flags": Object {
    "antiSybilVerification": "phoneAndFunCaptcha",
    "darkTheme": false,
    "debug": false,
    "designSystem": false,
    "metaTx": true,
    "sandbox": false,
  },
  "hdwallet": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "history": Hd {
    "j": 65937614,
    "k": null,
    "q": 8192,
  },
  "hub": pa {
    "e": Array [
      "head",
      null,
      "events",
      Lf {
        "count": 0,
        "ea": null,
        "j": 31858766,
        "k": null,
        "p": 0,
        "q": 8192,
        "sa": W {
          "W": Array [],
          "g": 0,
          "j": 167668511,
          "k": null,
          "p": 0,
          "q": 8196,
          "root": ef {
            "e": Array [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            "u": null,
          },
          "shift": 5,
        },
      },
    ],
    "g": 2,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "migrations": Object {
    "steps": Object {},
    "targets": Array [],
  },
  "myInfo": Object {
    "changed": Object {},
  },
  "networking": Object {},
  "onboarding": Object {
    "newbie": false,
    "userData": Object {},
  },
  "recovery": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "request": null,
  "scanner": Object {
    "cameraEnabled": false,
  },
  "settings": Object {
    "analyticsOptOut": false,
    "channel": undefined,
    "dataBackup": false,
  },
  "sns": Object {},
  "status": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "uport": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "vc": Object {
    "jwt": Array [],
  },
}
`;

exports[`resetDevice() 2`] = `
Object {
  "authorization": Object {
    "cameraAuthorized": "undetermined",
    "notificationsAuthorized": "undetermined",
    "photoAuthorized": "undetermined",
  },
  "contacts": Object {
    "index": 0,
    "key": "contacts",
    "selectedContact": false,
  },
  "events": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "flags": Object {
    "antiSybilVerification": "phoneAndFunCaptcha",
    "darkTheme": false,
    "debug": false,
    "designSystem": false,
    "metaTx": true,
    "sandbox": false,
  },
  "hdwallet": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "history": Hd {
    "j": 65937614,
    "k": null,
    "q": 8192,
  },
  "hub": pa {
    "e": Array [
      "head",
      null,
      "events",
      Lf {
        "count": 0,
        "ea": null,
        "j": 31858766,
        "k": null,
        "p": 0,
        "q": 8192,
        "sa": W {
          "W": Array [],
          "g": 0,
          "j": 167668511,
          "k": null,
          "p": 0,
          "q": 8196,
          "root": ef {
            "e": Array [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            "u": null,
          },
          "shift": 5,
        },
      },
    ],
    "g": 2,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "migrations": Object {
    "steps": Object {},
    "targets": Array [],
  },
  "myInfo": Object {
    "changed": Object {},
  },
  "networking": Object {},
  "onboarding": Object {
    "newbie": false,
    "userData": Object {},
  },
  "recovery": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "request": null,
  "scanner": Object {
    "cameraEnabled": false,
  },
  "settings": Object {
    "analyticsOptOut": false,
    "channel": undefined,
    "dataBackup": false,
  },
  "sns": Object {},
  "status": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "uport": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "vc": Object {
    "jwt": Array [],
  },
}
`;

exports[`resetDevice() 3`] = `
Object {
  "authorization": Object {
    "cameraAuthorized": "undetermined",
    "notificationsAuthorized": "undetermined",
    "photoAuthorized": "undetermined",
  },
  "contacts": Object {
    "index": 0,
    "key": "contacts",
    "selectedContact": false,
  },
  "events": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "flags": Object {
    "antiSybilVerification": "phoneAndFunCaptcha",
    "darkTheme": false,
    "debug": false,
    "designSystem": false,
    "metaTx": true,
    "sandbox": false,
  },
  "hdwallet": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "history": Hd {
    "j": 65937614,
    "k": null,
    "q": 8192,
  },
  "hub": pa {
    "e": Array [
      "head",
      null,
      "events",
      Lf {
        "count": 0,
        "ea": null,
        "j": 31858766,
        "k": null,
        "p": 0,
        "q": 8192,
        "sa": W {
          "W": Array [],
          "g": 0,
          "j": 167668511,
          "k": null,
          "p": 0,
          "q": 8196,
          "root": ef {
            "e": Array [
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
              null,
            ],
            "u": null,
          },
          "shift": 5,
        },
      },
    ],
    "g": 2,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "migrations": Object {
    "steps": Object {},
    "targets": Array [],
  },
  "myInfo": Object {
    "changed": Object {},
  },
  "networking": Object {},
  "onboarding": Object {
    "newbie": false,
    "userData": Object {},
  },
  "recovery": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "request": null,
  "scanner": Object {
    "cameraEnabled": false,
  },
  "settings": Object {
    "analyticsOptOut": false,
    "channel": undefined,
    "dataBackup": false,
  },
  "sns": Object {},
  "status": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "uport": pa {
    "e": Array [],
    "g": 0,
    "j": 16647951,
    "k": null,
    "p": null,
    "q": 8196,
  },
  "vc": Object {
    "jwt": Array [],
  },
}
`;
